fix(entries): slightly increase time-to-title spacing

--- a/static/css/entries.css
+++ b/static/css/entries.css
@@ -429,7 +429,7 @@ body {
     
     .entries-section .entry-card .entry-title {
         margin: 0;
-        margin-top: 0.5rem;
+        margin-top: 0.75rem;
         margin-bottom: 0;
         font-size: 1.125rem;
         font-weight: 700;
@@ -1458,7 +1458,7 @@ body {
         font-size: 1.02rem;
         font-weight: 700;
         margin: 0;
-        margin-top: 0.5rem;
+        margin-top: 0.75rem;
         margin-bottom: 0;
         padding-bottom: 0;
         line-height: 1.22;
